# minecraft_temple_of_elemental_evil

./: .gitignore  README.md  pack.mcmeta  pyproject.toml
data/temple_of_elemental_evil/function/: all_loot.mcfunction  as_lock_slots.mcfunction  create_secret_door_f1.mcfunction  create_secret_door_f2.mcfunction  create_secret_door_f3.mcfunction  create_secret_door_f4.mcfunction  equip.mcfunction  for_loop.mcfunction  if_invisible.mcfunction  loop_init.mcfunction  loot_macro.mcfunction  remove_secret_door.mcfunction  reset_spawner.mcfunction  reset_spawners.mcfunction  reset_spawners_x_2.mcfunction  reset_spawners_y.mcfunction  reset_spawners_y_2.mcfunction  reset_vault.mcfunction  scaffold.mcfunction  search_for_secret_door.mcfunction  summon_skeleton.mcfunction  summon_skeleton2.mcfunction
data/temple_of_elemental_evil/function/armor_stand/: set_scale.mcfunction  unlock_slots.mcfunction
data/temple_of_elemental_evil/function/item_frame/: fixed.mcfunction
data/temple_of_elemental_evil/function/secret_door/: create_floor_1.mcfunction  create_floor_2.mcfunction  create_floor_3.mcfunction  create_floor_4.mcfunction  create_generic.mcfunction  (+2 more)
data/temple_of_elemental_evil/recipe/: silver_piece.json  silver_piece_backup.json
data/temple_of_elemental_evil/structure/: test_ghast.nbt
data/temple_of_elemental_evil/test_environment/: mobs.json
data/temple_of_elemental_evil/test_instance/: ghast.json
src/: __main__.py  equipment.py  monster.py  spawner.py  temple_of_elemental_evil.py
src/data/: monsters.json
src/resources/templates/: spawner.mcfunction.j2
(+271 files in other folders)
