[build-system]
requires = ["setuptools>64"]

[project]
name = "temple_of_elemental_evil"
version = "2025.23.03"
description = "Python templates which help me generate files for a minecraft data pack"
keywords = ["minecraft"]
authors = [
  { name = "Zachary Ferraro", email = "zferraro@gmail.com" }
]
dependencies = [
  "jinja2"
]

[project.optional-dependencies]
test = [
  "pytest",
  "coverage",
  "pyyaml",
  "pylint",
  "mock"
]

[project.scripts]
temple-of-elemental-evil = "temple_of_elemental_evil.__main__:main"

[tool.setuptools.package-dir]
"temple_of_elemental_evil" = "src"

[tool.coverage.run]
branch = true
source = [ "temple_of_elemental_evil" ]
omit = [
  "**/__init__.py",
  "**/__main__.py"
]
command_line = "-m pytest test -W ignore::DeprcationWarning"

[tool.coverage.report]
omit = [
  "**/__init__.py",
  "**/__main__.py"
]